2009-05-25  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post release version bump
	* debian/changelog: post release version bump

2009-05-25  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.76]

	* NEWS: Updates.
	* configure.ac: Bump version.
	* debian/changelog: Updates.

2009-05-25  Alberto Garcia  <agarcia@igalia.com>

	* hildon/hildon-app-menu.c: Doc updates.

2009-05-25  Claudio Saavedra  <csaavedra@igalia.com>

	* hildon/hildon-banner.c: Remove leftover macro.

2009-05-25  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_scroll_indicator_fade),
	(hildon_pannable_area_button_release_cb): Reviewed vmin
	conditions, it could cause problems in the fadeout procedure.

2009-05-25  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c
	(hildon_pannable_area_button_release_cb): Added a threshold to
	push the animation if the speed is big (MAX_SPEED_THRESHOLD).

2009-05-25  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_set_property): Added code to sync the gtk
	dnd threshold with the panning threshold.

2009-05-25  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Changed some of the default
	values, now it should be less responsive and more accurate.

2009-05-25  Alejandro G. Castro  <alex@igalia.com>

	* hildon/hildon-pannable-area.c,
	(hildon_pannable_area_init),
	(hildon_pannable_area_scroll_indicator_fade),
	(hildon_pannable_area_button_press_cb),
	(hildon_pannable_axis_scroll),
	(hildon_pannable_area_timeout),
	(hildon_pannable_area_motion_notify_cb),
	(hildon_pannable_area_button_release_cb): Changed the name of the
	clicked attribute to button_pressed, it is more clear about its use.

2009-05-25  Alejandro Pinheiro <apinheiro@igalia.com>

	* src/hildon-pannable-area.c
	(hildon_pannable_area_init): set scroll_delay_counter and scrollbar_fade_delay
	to 0